[package]
name = "sigstore-do-not-use"
version = "0.1.0"
edition = "2021"
description = "do-not-use-test-crate-123"
license = "MIT"
documentation = "https://github.com/lukehinds/sigstore-do-not-use/docs"
homepage = "https://github.com/lukehinds/sigstore-do-not-use"
repository = "https://github.com/lukehinds/sigstore-do-not-use"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a1 = "0.1.1"